[gd_scene load_steps=4 format=3 uid="uid://dec78eo0mpgmx"]

[ext_resource type="Script" path="res://src/UserInterface/Components/SelectLevelButton.gd" id="1_2wt2l"]
[ext_resource type="Texture2D" uid="uid://b8b3fwsvn7i27" path="res://assets/Lock-Lock-icon.png" id="2_c5c0y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d511k"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.921569)

[node name="SelectLevelButton" type="Button"]
custom_minimum_size = Vector2(60, 60)
offset_right = 60.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 36
theme_override_styles/disabled = SubResource("StyleBoxFlat_d511k")
script = ExtResource("1_2wt2l")

[node name="LevelLockedIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = 8.0
offset_right = -15.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c5c0y")
expand_mode = 1

[connection signal="button_up" from="." to="." method="_on_button_up"]
